kubernetes/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: px-client
  labels:
    app: keycloak
spec:
  ports:
  - name: https
    port: 8443
    targetPort: 8443
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: px-client
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      imagePullSecrets:
      - name: docker-hub
      containers:
      - name: keycloak
        image: calvarado2004/portworx-client-keycloak:latest
        ports:
        - name: https
          containerPort: 8443
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /auth
            port: 8080
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 2Gi
