kubernetes/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: portworx-client
spec:
  serviceName: postgresql-service
  selector:
    matchLabels:
      app: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:18
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: px-csi-db
        resources:
          requests:
            storage: "5Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: px-client
  labels:
    app: postgres
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
