kubernetes/pxBrokerDeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-svc
  labels:
    app: pxbroker
spec:
  selector:
    app: pxbroker
  ports:
  - port: 8081
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  labels:
    app: pxbroker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pxbroker
  template:
    metadata:
      labels:
        app: pxbroker
    spec:
      serviceAccountName: pxbroker-sa
      containers:
      - name: pxbroker
        image: calvarado2004/portworx-client-broker:latest
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8081
        livenessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/ping || exit 1'
          initialDelaySeconds: 7
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/ping || exit 1'
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
