kubernetes/pxFrontendDeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: pxfrontend-service
  labels:
    app: pxfrontend
spec:
  selector:
    app: pxfrontend
  ports:
    - port: 80
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: pxfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pxfrontend
  template:
    metadata:
      labels:
        app: pxfrontend
    spec:
      containers:
        - name: pxfrontend
          image: calvarado2004/portworx-client-frontend:latest
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8082
          livenessProbe:
            exec:
              command:
                - sh
                - -ec
                - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8082/ping || exit 1'
            initialDelaySeconds: 7
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -ec
                - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8082/ping || exit 1'
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
